# CVTA_clock_in_v2

./: .gitignore  api_server.py  api_server.spec  log_config.py  main.py  pyproject.toml  reader_client.py  reader_client.spec
database/: base.py  database_manager.py  hr_manager.py  record_manager.py  shift_manager.py
frontend/: .env  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: index.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/styles/: element.scss  variables.scss
frontend/src/views/: Cards.vue  Dashboard.vue  Login.vue  Personnel.vue  Records.vue  Shifts.vue  System.vue
reader/: global_card_reader.py
web/: export.py
worker/: offline_manager.py  punch_worker.py  worker_base.py  worker_manager.py
